--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="title_favorite">Favorite</string>
     <string name="desc_coin_image">Coin Image</string>
     <string name="desc_back_image">Back button</string>
+    <string name="message_no_favorites">Favorite coin not added yet</string>
 </resources>
