--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="desc_coin_image">Coin Image</string>
     <string name="desc_back_image">Back button</string>
     <string name="message_no_favorites">Favorite coin not added yet</string>
+    <string name="message_login_success">Login succeeded!</string>
 </resources>
