UX flow messages added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,8 @@
     <string name="message_no_favorites">Favorite coin not added yet</string>
     <string name="message_login_success">Login succeeded!</string>
     <string name="coin_data_available">New price!</string>
+    <string name="message_notification_on">I will notify you if the price changes</string>
+    <string name="message_favorite_delete">%s removed from favorites</string>
+    <string name="message_timer_on">\"Timer is set to (minutes): \"</string>
+    <string name="message_timer_off">\"Set refresh interval in minutes: \"</string>
 </resources>
